--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 	<div ng-view></div>
 
 
-
-
-
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/angular.min.js"></script>
@@ -23,6 +20,10 @@
 
 
 	<script src="js/app.js"></script>
+
+	<script type="text/ng-template" id="partials/contact.html" src="partials/contact.html"></script>
+	<script type="text/ng-template" id="partials/services.html" src="partials/services.html"></script>
+	<script type="text/ng-template" id="partials/home.html" src="partials/home.html"></script>
 	
 </body>
 </html>
