--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-controller="MainCtrl">
 
-	<div ui-view></div>
+	<div ng-view></div>
 
 
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
