--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body ng-controller="MainCtrl">
 
+	<a href="#/home">home</a>
+	<a href="#/services">services</a>
+	<a href="#/contact">contact</a>
+
 	<div ng-view></div>
 
 
