change to ui-sref

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body ng-controller="MainCtrl">
 
-	<a href="#/home">home</a>
-	<a href="#/services">services</a>
-	<a href="#/contact">contact</a>
+	<a ui-sref="home">home</a>
+	<a ui-sref="services">services</a>
+	<a ui-ref="contact">contact</a>
 
 	<div ui-view></div>
 
