--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<a ui-sref="home">home</a>
 	<a ui-sref="services">services</a>
-	<a ui-ref="contact">contact</a>
+	<a ui-sref="contact">contact</a>
 
 	<div ui-view></div>
 
